# lagrange

./: AUTHORS.md  CMakeLists.txt  README.md  noch_decode_icon.sh  noch_encode_icon.sh
.forgejo/workflows/: build.yml
cmake/: Depends-Android.cmake  Depends-iOS.cmake  Depends.cmake
debian/: changelog  control  rules
debian/maemo/: lagrange.desktop
debian/source/: include-binaries
lib/the_Foundation/: .gitignore  CHANGES.md  CMakeLists.txt  CheckSSE.cmake  Depends.cmake  LICENSE  README.md  config.h.in  ssecheck.c  the_Foundation.doxygen  the_Foundation.pc.in
lib/the_Foundation/conf/: lldbinit.conf  tF_gdb.py  the_Foundation.py
lib/the_Foundation/include/the_Foundation/: address.h  archive.h  argcount.h  array.h  atomic.h  audience.h  block.h  blockhash.h  buffer.h  c11threads.h  class.h  commandline.h  datagram.h  defs.h  file.h  fileinfo.h  fixed.h  fixed2.h  fixed3.h  future.h  garbage.h  geometry.h  hash.h  intset.h  list.h  map.h  math.h  math_generic.h  math_sse.h  mutex.h  noise.h  object.h  objectlist.h  path.h  process.h  ptrarray.h  ptrset.h  queue.h  random.h  range.h  (+21 more)
lib/the_Foundation/src/: address.c  archive.c  array.c  audience.c  block.c  blockhash.c  buffer.c  c11threads.c  class.c  commandline.c  crc32.c  file.c  fileinfo.c  future.c  garbage.c  geometry.c  hash.c  intset.c  list.c  map.c  math.c  math_generic.c  math_sse.c  md5.c  mutex.c  noise.c  object.c  objectlist.c  path.c  ptrarray.c  ptrset.c  punycode.c  queue.c  random.c  rect.c  regexp.c  sortedarray.c  stream.c  string.c  stringarray.c  (+12 more)
lib/the_Foundation/src/platform/: apple.c  generic.c  linux.c  strnstr.h  windows.c
lib/the_Foundation/src/platform/posix/: address.c  datagram.c  locale.c  pipe.c  pipe.h  process.c  service.c  socket.c
lib/the_Foundation/src/platform/win32/: address.c  datagram.c  file.c  msdirent.h  pipe.c  pipe.h  process.c  service.c  socket.c  wide.c  wide.h
lib/the_Foundation/tests/: t_archive.c  t_math.c  t_network.c  t_process.c  t_string.c  t_test.c  t_threading.c  t_udptest.c
po/: compile.py  en.po  eo.po  es.po  eu.po  fi.po  gl.po  ja.po  ro.po  ru.po  sgs.po  sr.po  tr.po  uk.po
res/: CMakeLists.txt
res/about/: android-version.gmi  help.gmi  ios-version.gmi  version.gmi
src/: android.c  app.c  app.h  bookmarks.c  bookmarks.h  defs.h  feeds.c  feeds.h  fontpack.c  gmdocument.c  gmdocument.h  gmrequest.c  gmutil.c  gmutil.h  gopher.c  ios.h  ios.m  ipc.c  jpegxl.c  jpegxl.h  lang.c  macos.m  main.c  media.c  media.h  mimetypes.i  prefs.c  prefs.h  resources.c  resources.h  visited.c  visited.h  win32.c  win32.h  x11.c  x11.h
src/audio/: player.c  player.h
src/ui/: certlistwidget.c  color.c  command.c  command.h  documentview.c  documentwidget.c  documentwidget.h  font.c  font.h  inputwidget.c  keys.c  labelwidget.c  listwidget.c  listwidget.h  lookupwidget.c  mediaui.c  metrics.c  mobile.c  mobile.h  root.c  safearea_stub.c  scrollwidget.c  sidebarwidget.c  sidebarwidget.h  text.c  text.h  text_simple.c  text_stb.c  text_terminal.c  touch.c  uploadwidget.c  util.c  util.h  widget.c  widget.h  window.c  window.h
